--- a/src/components/Common/Table/styles.module.css
+++ b/src/components/Common/Table/styles.module.css
@@ -21,6 +21,26 @@
     padding-top: 3px;
 }
 
+.cell span{
+    font-size: 0.875rem;
+    overflow: hidden;
+    padding: 0.5em 0;
+    white-space: nowrap;
+    text-decoration: none;
+    text-overflow: ellipsis;
+}
+
+.check select{
+    display: flex;
+    flex: auto;
+    border: none;
+    outline: none;
+    font-size: 0.875rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-decoration: none;
+    text-overflow: ellipsis;
+}
 
 .target {
     background-color: #daefe4;
@@ -84,4 +104,23 @@
 
 .disabled {
     cursor: not-allowed;
+}
+
+.errorBlock {
+    display: flex;
+    flex: none;
+    padding: 0 0.1em;
+    border-radius: 0.15em;
+}
+
+.mismatch {
+    background-color: #93b0f5;
+}
+
+.missing {
+    background-color: #ff97a7;
+}
+
+.outlier {
+    background-color: #fed900;
 }
