--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -573,7 +573,7 @@
   font-family: SanFranciscoText;
   font-size: 1rem;
   color: #000000;
-  line-height: 1.2;
+  line-height: 1rem;
   padding: 5px 10px;
   width: 100%;
   outline: none;
