--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -23,7 +23,7 @@
     .metricSelection {
         position: absolute;
         right: 0;
-        top: -25%;
+        top: -4em;
         display: flex;
         .text {
             line-height: 38px;
