--- a/src/components/Layout/Header/styles.module.css
+++ b/src/components/Layout/Header/styles.module.css
@@ -255,3 +255,12 @@ span.num {
   display: flex;
   margin: 0.1em;
 }
+
+.logout :global(.ant-dropdown-menu-item) {
+  font-size: 1.25rem;
+  padding: 1rem 1.5rem;
+}
+
+.logout :global(.ant-dropdown-menu-item .anticon) {
+  margin-right: 1rem;
+}
