--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -74,25 +74,26 @@
 
 .typeBox {
 	display: flex;
-	margin: 0.1em 0;
 	flex: none;
+	align-items: center;
+	z-index: 1;
 }
 
 .type {
 	display: flex;
 	margin-right: 0.3em;
+	align-items: center;
 }
 
 .typeBlock {
 	width: 10px;
 	height: 10px;
 	display: flex;
-	margin-right: 0.1em;
+	margin: 0.1em 0.1em 0.1em 0;
 }
 
 .contentBox {
 	display: flex;
-	margin-top: 0.05em;
 	flex: auto;
 }
 
@@ -169,9 +170,10 @@
 .content {
 	display: flex;
 	flex: 1 0;
-	margin-left: 0.5em;
+	padding-left: 0.5em;
 	flex-direction: column;
 	overflow: hidden;
+	border-top: 2px solid #979797;
 }
 
 .block {
@@ -387,14 +389,6 @@
 	background-image: none;
 	border: transparent;
 	cursor: not-allowed;
-}
-
-.save {
-	background-image: linear-gradient(to bottom, #5b657b, #243448);
-}
-
-.save span {
-	color: #fff;
 }
 
 .cancel {
@@ -728,6 +722,13 @@ span.fixesEdit {
 	white-space: nowrap;
 }
 
+.targetPercentLabel input {
+	font-size: 0.875rem;
+	color: #4a4a4a;
+	line-height: 1.2;
+	width: 100%;
+}
+
 .targetPercentValue {
 	display: flex;
 	flex: auto;
@@ -766,7 +767,6 @@ span.fixesEdit {
 .cleanTargetButton {
 	display: flex;
 	flex: none;
-	margin-right: 0.2em;
 }
 
 .cleanTargetButton button {
@@ -779,6 +779,7 @@ span.fixesEdit {
 	border: none;
 	outline: none;
 	cursor: pointer;
+	margin-right: .2em;
 }
 
 .cleanTargetButton span {
@@ -1108,19 +1109,19 @@ span.fixesEdit {
 
 .summaryButton span {
 	font-family: HelveticaNeue;
-  font-size: 1rem;
-  font-weight: bold;
-  text-align: left;
+	font-size: 1rem;
+	font-weight: bold;
+	text-align: left;
 	color: #1d2b3c;
 	line-height: 1.3;
 }
 
 .summaryConfirm {
-  background-image: linear-gradient(to bottom, #5b657b, #243448);
+	background-image: linear-gradient(to bottom, #5b657b, #243448);
 }
 
 .summaryConfirm span {
-  color: #fff;
+	color: #fff;
 }
 
 .summaryPie {
@@ -1161,5 +1162,39 @@ span.fixesEdit {
 	font-family: Arial;
 	font-size: 0.875rem;
 	color: #595959;
+	line-height: 1.2;
+}
+
+.save {
+	background-image: linear-gradient(to bottom, #5b657b, #243448);
+}
+
+button.save {
+	background-image: linear-gradient(to bottom, #5b657b, #243448);
+}
+
+.save span {
+	color: #fff;
+}
+
+.issueTabs {
+	display: flex;
+	flex: none;
+	margin-left: auto;
+}
+
+.issueTab {
+	display: flex;
+	flex: none;
+	cursor: pointer;
+	padding: .1em;
+	border-bottom: 3px solid transparent;
+	margin-bottom: -2px;
+}
+
+.issueTab span {
+	color: #1d2b3c;
+	font-family: HelveticaNeue;
+	font-size: 1rem;
 	line-height: 1.2;
 }
