--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -72,9 +72,11 @@
 .name {
     font-size: 1.125rem;
     line-height: 1.375rem;
-    display: flex;
-    flex: none;
     margin-bottom: 0.75rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 
 .description {
