--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -74,6 +74,11 @@
   flex: none;
 }
 
+.trainImg img{
+  width: 130px;
+  height: 120px;
+}
+
 .trainName {
   display: flex;
   justify-content: center;
