--- a/src/components/Data/Quality/styles.module.css
+++ b/src/components/Data/Quality/styles.module.css
@@ -413,7 +413,10 @@
 	display: flex;
 	flex: none;
 	flex-wrap: wrap;
-	margin-top: 0.5rem;
+	margin: 0.1em 0;
+	height: 1.4em;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .fixesCheck {
@@ -857,7 +860,8 @@ span.fixesEdit {
 .fixesTips {
 	display: flex;
 	flex: none;
-	height: 1em;
+	padding: .2em 0;
+	border-top: 2px solid #c4cbd7;
 }
 
 .fixesTips span {
@@ -1206,4 +1210,13 @@ button.save {
 	font-family: HelveticaNeue;
 	font-size: 1rem;
 	line-height: 1.2;
+}
+
+button.activeButton {
+	background-image: #ccc;
+	cursor: pointer;
+}
+
+button.activeButton span {
+	color: #1d2b3c;
 }
