--- a/src/components/Data/Schema/styles.module.css
+++ b/src/components/Data/Schema/styles.module.css
@@ -136,3 +136,112 @@
 .target {
     background-color: #daefe4;
 }
+
+.cell {
+    display: flex;
+    flex: none;
+    align-items: center;
+    padding: 0 0.1em;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+.titleCell {
+    display: flex;
+    flex: none;
+    align-items: center;
+    padding: 0 0.1em;
+    border-right: 1px solid #ccc;
+    padding-top: 3px;
+    border-bottom: 3px solid;
+}
+
+.titleCell span{
+    font-size: 0.875rem;
+    overflow: hidden;
+    padding: 0.5em 0;
+    white-space: nowrap;
+    text-decoration: none;
+    text-overflow: ellipsis;
+}
+
+.cell span{
+    font-size: 0.875rem;
+    overflow: hidden;
+    padding: 0.5em 0;
+    white-space: nowrap;
+    text-decoration: none;
+    text-overflow: ellipsis;
+}
+
+.check select{
+    display: flex;
+    flex: auto;
+    border: none;
+    outline: none;
+    font-size: 0.875rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-decoration: none;
+    text-overflow: ellipsis;
+}
+
+.check {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+
+.checked {
+    color: #9b9b9b;
+}
+
+.missed {
+    padding-top: 0px;
+    border-top: 3px solid #ff3151;
+}
+
+.duplicated {
+    padding-top: 0px;
+    border-top: 3px solid #f19400;
+}
+
+.schemaMissed,
+.schemaDuplicated {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.2em;
+}
+
+.schemaMissed span {
+    font-size: 0.875rem;
+    color: #ff3151;
+ }
+
+.schemaMissed .errorBlock{
+    background: #ff3151;
+    width: 0.1em;
+    height: 0.1em;
+    display: flex;
+    margin: 0 0.08em;
+}
+
+.schemaDuplicated span {
+    font-size: 0.875rem;
+    color: #f19400;
+    white-space: nowrap;
+}
+
+.schemaDuplicated .errorBlock{
+    background: #f19400;
+    width: 0.1em;
+    height: 0.1em;
+    display: flex;
+    margin: 0 0.08em;
+}
+
+.disabled {
+    cursor: not-allowed;
+}
