add diagnose in advanced view

--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -133,3 +133,51 @@
         }
     }
 }
+
+.residualDiagnose {
+padding-bottom: 0.5em;
+.plot {
+    display: inline-block;
+    width: 30%;
+
+}
+.choosePlot {
+    display: inline-block;
+    width: 70%;
+    vertical-align: top;
+    .radioWrapper {
+    display: inline-block;
+    margin: 0.1em; 
+    }
+}
+}
+
+.diagnoseResult {
+    display: inline-block;
+    width: 500px;
+    vertical-align: top;
+    margin-top: 1em;
+    .content {
+    margin-top: 1em;
+    .items {
+    margin-left: 2em;
+    list-style-type: initial;
+    }
+    .action {
+    // margin-left: 2em;
+    margin-top: 2em;
+    span {
+        display: inline-block;
+        // width: 250px;
+    }
+    button {
+        width: 205px;
+        float: right;
+    }
+    }
+}
+.header {
+    font-weight: bold;
+}
+}
+  
