--- a/src/components/Data/Schema/styles.module.css
+++ b/src/components/Data/Schema/styles.module.css
@@ -133,17 +133,14 @@
     cursor: pointer;
 }
 
-.target {
-    background-color: #daefe4;
-}
-
 .cell {
     display: flex;
     flex: none;
     align-items: center;
     padding: 0 0.1em;
-    border-bottom: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #d8d8d8;
+    border-right: 1px solid #d8d8d8;
+    background-color: #f5f5f5
 }
 
 .titleCell {
@@ -151,7 +148,7 @@
     flex: none;
     align-items: center;
     padding: 0 0.1em;
-    border-right: 1px solid #ccc;
+    border-right: 1px solid #d8d8d8;
     padding-top: 3px;
     border-bottom: 3px solid;
 }
@@ -163,6 +160,7 @@
     white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
+    width: 100%;
 }
 
 .cell span{
@@ -172,6 +170,7 @@
     white-space: nowrap;
     text-decoration: none;
     text-overflow: ellipsis;
+    width: 100%;
 }
 
 .check select{
@@ -189,8 +188,8 @@
 .check {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid #ccc;
-    border-right: 1px solid #ccc;
+    border-bottom: 1px solid #d8d8d8;
+    border-right: 1px solid #d8d8d8;
 }
 
 .checked {
@@ -244,4 +243,8 @@
 
 .disabled {
     cursor: not-allowed;
+}
+
+.target {
+    background-color: #daefe4;
 }
