fix loading && fix dataview && fix cost based

--- a/src/components/Modeling/Result/PredictVActual.module.less
+++ b/src/components/Modeling/Result/PredictVActual.module.less
@@ -1,6 +1,6 @@
 .predictActual {
   display: inline-block;
-  overflow: scroll;
+  overflow: visible;
   vertical-align: top;
   width: 65%;
   font-size: 1rem;
