--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -741,7 +741,8 @@
 }
 
 .costCellSmall {
-    flex: 1 1;
+    flex: none;
+    width: 1em;
 }
 
 .costCellCenter {
@@ -873,4 +874,42 @@
     line-height: 1.33;
     color: #000000;
     font-weight: bold;
+}
+
+.sepCell {
+    display: flex;
+    flex: none;
+    width: 1em;
+    height: .4em;
+    position: relative;
+    flex-direction: column;
+}
+
+.sep {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    display: flex;
+}
+
+.sep span {
+    width: 100%;
+    border-top: 1px solid;
+    transform: rotate(21.8deg);
+}
+
+.sepText {
+    display: flex;
+    width: 50%;
+    height: 50%;
+    align-items: center;
+}
+
+.sepText span {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    font-size: .5rem;
 }
