--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -85,6 +85,7 @@
     .rightPanel {
         flex: 1;
         .plot {
+            display: flex;
             img {
                 width: 400px;
                 height: 300px;
@@ -139,7 +140,6 @@ padding-bottom: 0.5em;
 .plot {
     display: inline-block;
     width: 30%;
-
 }
 .choosePlot {
     display: inline-block;
@@ -168,7 +168,7 @@ padding-bottom: 0.5em;
     margin-top: 2em;
     span {
         display: inline-block;
-        // width: 250px;
+        width: 250px;
     }
     button {
         width: 205px;
