style fix in correlation matrix

--- a/src/components/Modeling/Start/CorrelationMatrix.module.less
+++ b/src/components/Modeling/Start/CorrelationMatrix.module.less
@@ -3,6 +3,11 @@
 
   .matrix {
     padding-bottom: 5em;
+    overflow: auto;
+    max-width: 400px;
+    .correlationRow {
+      white-space: nowrap;
+    }
     .horizonText {
       width: 50px;
       text-overflow: ellipsis;
