--- a/src/components/Modeling/Start/CorrelationMatrix.module.less
+++ b/src/components/Modeling/Start/CorrelationMatrix.module.less
@@ -34,10 +34,10 @@
   }
   .colorBar {
     width: 60px;
-    height: 230px;
     margin-left: 2em;
     bottom: 0;
     right: -2em;
+    display: flex;
     .bar {
       width: 20px;
       height: 100%;
@@ -46,8 +46,9 @@
       margin-right: 0.3em;
     }
     .text {
-      display: inline-block;
-      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       vertical-align: top;
     }
   }
