--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -49,3 +49,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.error {
+  display: flex;
+  flex: auto;
+  justify-content: center;
+  align-items: center;
+}
