--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -1035,3 +1035,32 @@ span.advancedDesc {
   padding: 0.1em 12px;
   margin-top: 0.05em;
 }
+
+.newVariableHintSyntax button {
+  display: flex;
+  flex: none;
+  width: .8em;
+  padding: 0.05em 0.2em;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  margin-left: auto;
+  margin-right: .2em;
+  margin-top: .1em;
+}
+
+.newVariableHintTips {
+  position: absolute;
+  top: 100%;
+  left: 100%;
+  width: 100%;
+  display: flex;
+  flex: none;
+  flex-direction: column;
+  background: #fff;
+  padding: 0.1em 12px;
+  margin-top: 0.05em;
+  max-height: 5em;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
