--- a/src/components/D3Chart/D3Chart.module.less
+++ b/src/components/D3Chart/D3Chart.module.less
@@ -220,6 +220,9 @@
 .regressionPredictActualChart {
   height: 100%;
   width: 100%;  
+  display: flex;
+  flex: none;
+  justify-content: flex-end;
 }
 
 .groupSize {
