fix summary && add ensemble && fix css

--- a/src/components/Modeling/Start/styles.module.css
+++ b/src/components/Modeling/Start/styles.module.css
@@ -1047,6 +1047,7 @@ span.advancedDesc {
   margin-left: auto;
   margin-right: .2em;
   margin-top: .1em;
+  cursor: pointer;
 }
 
 .newVariableHintTips {
