--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -220,3 +220,8 @@ padding-bottom: 0.5em;
 .settingsSelect {
   min-width: 14rem;
 }
+
+.adrow :global(.anticon-up) {
+  transition: transform .3s ease;
+  margin-left: .2rem;
+}
