--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -226,3 +226,11 @@ padding-bottom: 0.5em;
   //     }
   // }
 }
+
+.headerLabel {
+  max-width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  vertical-align: middle;
+}
