--- a/src/components/Modeling/AdvancedView/ModelProcess.module.less
+++ b/src/components/Modeling/AdvancedView/ModelProcess.module.less
@@ -11,7 +11,8 @@
     .popoverLegend {
       cursor: pointer;
       background-color: white;
-      padding: 0.5em 1em;
+      padding: 0.4em 1em;
+      display: inline;
       color: #0F95E2;
       border: 0.1em solid black;
       border-top-right-radius: 1em;
@@ -22,10 +23,12 @@
       border-bottom-left-radius: 1em;
       border: 0.1em solid;
       border-right: none;
+      display: inline-block;
       padding: 0.5em 1.5em;
     }
     .textWrapper {
       vertical-align: middle;
+      display: inline-block;
       border-radius: 1em;
       border: 0.1em solid black;
       padding: 0.5em 1.5em;
@@ -39,6 +42,7 @@
     color: white;
     border-top-right-radius: 15em; 
     border-bottom-right-radius: 15em;
+    display: inline-block;
     padding: 1em 3em; 
     background-color: #0F95E2;
     border: 1px solid black;
@@ -80,7 +84,7 @@
   }
   .line {
     position: absolute;
-    top: 5px;
+    top: 4px;
     width: 5em;
     display: inline-block;
     background-color: black;
