fix etl error bug && reconnect && projectside && regplot && rename bug && cla model pridict && etl step error

--- a/src/components/Common/ProjectSide/styles.module.css
+++ b/src/components/Common/ProjectSide/styles.module.css
@@ -4,7 +4,7 @@
     flex: none;
     flex-direction: column;
     margin-top: 0.45em;
-    position: absolute;
+    position: fixed;
     right: 0;
     background-color: #fff;
 }
