--- a/src/components/D3Chart/D3Chart.module.less
+++ b/src/components/D3Chart/D3Chart.module.less
@@ -98,8 +98,7 @@
 }
 
 .liftHoverPanel,
-.rocHoverPanel,
-.hoverPanel {
+.rocHoverPanel {
   display: block;
   line-height: 1;
   padding: 6px;
@@ -110,6 +109,26 @@
   font-size: 12px;
   div {
     margin-top: 0.4em;
+  }
+}
+
+.hoverPanel {
+  display: block;
+  line-height: 1;
+  padding: 6px;
+  background-color: white;
+  color: black;
+  box-shadow: 0px 0px 1px #888888;
+  border-radius: 4px;
+  font-size: 12px;
+  max-width: 250px;
+  .hoverText {
+    margin-top: 0.4em;
+    white-space: nowrap;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.4;
   }
 }
 
