--- a/src/components/Common/Confirm/styles.module.css
+++ b/src/components/Common/Confirm/styles.module.css
@@ -14,7 +14,9 @@
   font-size: 1rem;
   font-family: HelveticaNeue;
   color: #4a4a4a;
-  line-height: 1.4
+  line-height: 1.4;
+  max-width: 100%;
+  word-break: break-all;
 }
 
 .modalBox {
