--- a/src/components/Main/styles.module.css
+++ b/src/components/Main/styles.module.css
@@ -5,15 +5,17 @@
   padding: 1rem 0;
 }
 
-.projectName,
-.dataset {
+.projectName, .dataset {
   margin: 0 2rem;
   font-size: 1rem;
+  max-width: 50%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .label {
   font-weight: bold;
 }
 
-.value {
-}
+.value {}
