--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -79,7 +79,8 @@
         }
     }
     .leftPanel {
-        min-width: 300px;
+        // min-width: 300px;
+        min-width: 620px;
         padding: 0.5em 3em;
         background-color: #f0f0f0;
         min-height: 200px;
