【showstopper】图表显示问题

--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -79,8 +79,8 @@
         }
     }
     .leftPanel {
-        // min-width: 300px;
-        min-width: 620px;
+        min-width: 300px;
+        // min-width: 620px;
         padding: 0.5em 3em;
         background-color: #f0f0f0;
         min-height: 200px;
@@ -117,6 +117,13 @@
                 background-color: rgb(237, 253, 219);
               }
             }
+
+            tr td{
+              white-space: nowrap;
+            }
+            // tr td:last-child{
+            //   white-space: nowrap;
+            // }
         }
     }
 }
