--- a/src/components/Common/ProjectSide/styles.module.css
+++ b/src/components/Common/ProjectSide/styles.module.css
@@ -3,19 +3,23 @@
     width: 8%;
     flex: none;
     flex-direction: column;
-    margin-top: 0.45em;
-    position: absolute;
+    position: fixed;
     right: 0;
     overflow: hidden;
     background-color: #fff;
+    overflow-y: auto;
+    top: 2em;
+    max-height: calc(100% - 2.2em);
+    border: solid 1px #c4cbd7;
+    margin-right: -1px;
 }
 
 .sideBox {
     display: flex;
-    border: solid 1px #c4cbd7;
+    /* border: solid 1px #c4cbd7; */
     border-right: none;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .sideBlock {
