fix command loading bug

--- a/src/components/Modeling/AdvancedView/AdvancedView.module.less
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.less
@@ -20,6 +20,9 @@
     font-size: 0.875rem;
     border: 0.5px solid #d8d8d8;
     position: relative;
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
     :global(.ant-radio-wrapper) {
       vertical-align: middle;
     }
