--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -830,7 +830,7 @@
 }
 
 .cost11 {
-    background-color: #9be44b;
+    background-color: #adaafc;
 }
 
 .cost10 {
@@ -838,11 +838,11 @@
 }
 
 .cost01 {
-    background-color: #adaafc;
+    background-color: #ffcc78;
 }
 
 .cost00 {
-    background-color: #e8e8e8;
+    background-color: #9be44b;
 }
 
 .costClose {
