--- a/src/components/Common/Pagination/styles.module.css
+++ b/src/components/Common/Pagination/styles.module.css
@@ -1,5 +1,6 @@
 .pagination {
   font-size: 1.25rem;
+  white-space: nowrap;
 }
 .pagination:global(.ant-pagination.mini .ant-pagination-item) {
   height: 2.5rem;
