add plot close && fix clean data preview && fix advance view sort && rm settings when rm models && fix rename && fix some text

--- a/src/components/Modeling/Start/CorrelationMatrix.module.less
+++ b/src/components/Modeling/Start/CorrelationMatrix.module.less
@@ -27,6 +27,7 @@
   .colorBar {
     width: 60px;
     margin-left: 2em;
+    margin-right: .5em;
     bottom: 0;
     right: -2em;
     display: flex;
