--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -8,20 +8,26 @@
 .modelResult span {
     font-size: 1.125rem;
     display: flex;
-    font-family: SanFranciscoText;
+    font-family: SanFranciscoText, serif;
     line-height: normal;
     align-items: baseline;
     color: #1d2b3c;
 }
 
 .process{
-    height: 1em;
+    /*height: 1em;*/
+    padding: 0.2em;
     border:1px solid #C4CBD7;
     margin: 0.2em;
     background-color: #FAFBFC;
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap;
+}
+
+.process label{
+    font-size: 0.2em;
 }
 
 .process img{
@@ -30,8 +36,23 @@
 }
 
 .process button span {
-    font-size: 14px;    
+    font-size: 14px;
     float: left;
+}
+
+.process dl{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+}
+.process dd{
+    display: flex;
+    margin-bottom: 0.1em;
+    align-items: center;
+}
+
+.process dd div{
+    margin-left:15px;
 }
 
 .result {
