--- a/src/components/Support/styles.module.css
+++ b/src/components/Support/styles.module.css
@@ -34,8 +34,30 @@
   border:1px solid #DDE5EF;
   margin-left: 15px;
   padding: 20px;
-  line-height: 1.2;
+  line-height: 1.4;
 }
+
+.content img{
+  text-align: center;
+  display: block;
+  margin: auto;
+  max-width: 70%;
+}
+
+.content ul{
+  list-style: none;
+}
+
+/*.content dt:before{*/
+  /*content:'';*/
+  /*position: relative;*/
+  /*width: 3px;*/
+  /*height: 3px;*/
+  /*display: inline-block;*/
+  /*background: #4a4a4a;*/
+  /*left: -5px;*/
+  /*top: -2px;*/
+/*}*/
 
 .title{
   font-size: 14px;
@@ -46,7 +68,8 @@
   font-size: 14px;
   color:#4a4a4a;
   display: block;
-  /*padding-bottom: 15px;*/
+  padding: 15px 0;
+  font-weight: bold;
 }
 
 .h1:hover{
