--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -35,6 +35,17 @@
     width: 30px;
     margin: 0 20px;
 }
+.process button{
+    display: flex;
+    align-items: center;
+}
+
+.process button i{
+    display: flex;
+}
+.process label{
+    text-transform:capitalize;
+}
 .many img{
     width: 15px;
     margin:0 5px;
