--- a/src/components/Detail/Performance/styles.module.css
+++ b/src/components/Detail/Performance/styles.module.css
@@ -3,11 +3,17 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: auto;
 }
 
 .block {
   margin-top: 0.37em;
   display: flex;
+  flex: 0 0 .5em;
+}
+
+.row {
+  flex: 0 0 .4em;
 }
 
 .label {
