change file system & add user relative pages

--- a/src/components/User/SignIn/styles.module.css
+++ b/src/components/User/SignIn/styles.module.css
@@ -91,3 +91,10 @@
     display: flex;
     align-items: center;
 }
+
+.forgetPassword {
+  font-size: 1rem;
+  color: #1d2b3c;
+  margin-top: 2em;
+  text-decoration: underline;
+}
