--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -483,6 +483,22 @@
     overflow-x: hidden;
 }
 
+.detailNone {
+    display: flex;
+    flex: none;
+    justify-content: center;
+}
+
+.detailNone span {
+    font-size: 0.875rem;
+    overflow: hidden;
+    max-width: 100%;
+    display: block;
+    text-overflow: ellipsis;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
 .detailRow {
     display: flex;
     padding: 0 0.25em;
