update package.json && rm less && disabled r2-a,r2-b

--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -233,6 +233,10 @@
     stroke: #ff8000;
 }
 
+.performance span{
+    display: block;
+}
+
 .performanceText {
     color: #000;
     margin-top: 0.15em;
