--- a/src/components/D3Chart/D3Chart.module.css
+++ b/src/components/D3Chart/D3Chart.module.css
@@ -27,6 +27,10 @@
   max-width: 300px;
   white-space: nowrap;
 }
+.chart svg,
+.prchart svg {
+  overflow: visible;
+}
 .speedComp .checkbox {
   top: 27px;
   right: 250px;
@@ -185,6 +189,9 @@
 .areaChart {
   height: 100%;
   width: 100%;
+}
+.areaChart svg {
+  overflow: visible;
 }
 .areaChart .area {
   fill: steelblue;
