--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -32,8 +32,8 @@
 }
 
 .process img{
-    width: 30px;
-    margin: 0 20px;
+    width: .3em;
+    margin: 0 .2em;
 }
 .process button{
     display: flex;
@@ -56,7 +56,7 @@
 }
 
 .process button span {
-    font-size: 14px;
+    font-size: 0.875rem;
     float: left;
 }
 
